# LibreCAD

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  ACTIONS_README.md  BuildLibreCAD.bat  BuildLibreCadInstaller.bat  CHANGELOG.md  CLEAN.SH  CMakeLists.txt  CMakePresets.json  Final_Frontage_Plan_Elev.lca).  INSTALL.TXT  Issue #2005 CMakeLists.txt  JenkinsFIle  Jenkinsfile  LICENSE  LibreCAD.groovy  LibreCAD.sln  PEN_PALETTE_README.md  README  README.md  azure-pipelines.yml  boost.pri  caduntu.dox  caduntu.pro  common.pri  common.pro  crowdin.yml  custom.pro  freetype.pri  lcUW.files  lcUW.includes  librecad.astylerc  librecad.dox  librecad.pro  librecad.sln  librecad2.pro  librecad_id_id.ts  muparser.pri  (+12 more)
dxflib/: FAQ  Makefile  Makefile.in  config.status  configure  configure.in  doxygen.cfg  dxflib.pro  dxflib.vcproj  dxflib_commercial_license.txt  readme_vcpp.txt
dxflib/doc/classref/html/: doxyfooter.html  doxyheader.html
dxflib/doc/manual/en/: Makefile  appendix_bib.xml  build.sh  compiling.xml  index.xml  index2.xml  overview.xml  reading.xml  settings.xml  writing.xml
dxflib/src/: dl_attributes.h  dl_codes.h  dl_creationadapter.h  dl_creationinterface.h  dl_dxf.cpp  dl_dxf.h  dl_entities.h  dl_exception.h  dl_extrusion.h  dl_writer.h  dl_writer_ascii.cpp  dl_writer_ascii.h  dxflib.vcproj
dxflib/test/: 3dface.dxf  Makefile  Makefile.in  demo.dxf  main.cpp  myfile.dxf  test.sh  test_creationclass.cpp  test_creationclass.h
fparser/: Makefile  Makefile.in  config.status  configure  configure.in  custom.pro  fp_identifier_parser.inc  fparser.hh  fparser.pro  fparser.vcproj  fparser_gmpint.hh  fpaux.hh  fptypes.hh
fparser/docs/: fparser.html
fparser/examples/: example.cc
fparser/mpfr/: GmpInt.cc  MpfrFloat.cc  MpfrFloat.hh
fparser/src/: fparser.cpp  fparser.h  fparser.txt  fparser.vcproj
libraries/lciconengine/: CMakeLists.txt  lciconengine.pro
libraries/lciconengine/src/: lc_svgiconengine.cpp  lc_svgiconengine.h  lc_svgiconengineplugin.cpp  lc_svgiconengineplugin.h  lc_svgicons.json  lc_svgicons.rc
libraries/libdxfrw/: .gitignore  .snapshot-revision  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  DWG_REFERENCE_COVERAGE_STATUS.md  DWG_ROADMAP.md  DWG_SUPPORT_PLAN.md  NEWS  README  README.md  TODO  autogen.sh  conanfile.py  configure.ac  dxfrw.vcxproj  dxfrw.vcxproj.filters  libdxfrw.pc.in  libdxfrw.pro  screw2012ascii.DXF
libraries/libdxfrw/.github/: FUNDING.yml
libraries/libdxfrw/src/: drw_base.cpp  drw_base.h  drw_classes.cpp  drw_classes.h  drw_cptable932.h  drw_cptable949.h  drw_cptable950.h  drw_cptables.h  drw_entities.cpp  drw_entities.h  drw_header.cpp  drw_header.h  drw_interface.h  drw_objects.cpp  drw_objects.h  drw_textcodec.cpp  drw_textcodec.h  dxfreader.cpp  dxfreader.h  dxfwriter.cpp  dxfwriter.h  handle_allocator.h  libdwgr.cpp  libdwgr.h  libdxfrw.cpp  libdxfrw.h  main_doc.h
libraries/libdxfrw/src/intern/: drw_cptable932.h  drw_cptable936.h  drw_cptable949.h  drw_cptable950.h  drw_cptables.h  drw_dbg.cpp  drw_dbg.h  drw_reserve.h  drw_textcodec.cpp  drw_textcodec.h  dwgbuffer.cpp  dwgbuffer.h  dwgbufferw.cpp  dwgbufferw.h  dwgreader.cpp  dwgreader.h  dwgreader15.cpp  dwgreader15.h  dwgreader18.cpp  dwgreader18.h  dwgreader21.cpp  dwgreader21.h  dwgreader24.cpp  dwgreader24.h  dwgreader27.cpp  dwgreader27.h  dwgreader32.cpp  dwgreader32.h  dwgutil.cpp  (+22 more)
libraries/libdxfrw/testdata/: dwg-fixtures.json
plugins/: CMakeLists.txt  custom.pro  plugins.pro  plugins.sln
plugins/align/: CMakeLists.txt  align.cpp  align.h  align.json  align.pro  align.vcproj  align.vcxproj  align.vcxproj.filters  plugin.rc
plugins/asciifile/: CMakeLists.txt  asciifile.cpp  asciifile.h  asciifile.json  asciifile.pro  asciifile.vcproj  asciifile.vcxproj  asciifile.vcxproj.filters  plugin.rc  sample-levels.txt
plugins/circletools/: README.md  circletools.cpp  circletools.h  circletools.json  circletools.pro
plugins/divide/: CMakeLists.txt  divide.cpp  divide.h  divide.json  divide.pro  divide.vcxproj  divide.vcxproj.filters  dividedlg.cpp  dividedlg.h  plugin.rc
plugins/gear/: CMakeLists.txt  gear.cpp  gear.h  gear.json  gear.pro  gear.vcxproj  gear.vcxproj.filters  plugin.rc
plugins/importshp/: custom.pro  importshp.cpp  importshp.h  importshp.json  importshp.pro  importshp.vcproj  importshp.vcxproj  importshp.vcxproj.filters
plugins/importshp/shapelib/: ChangeLog  dbfopen.c  safileio.c  shapefil.h  shpopen.c
plugins/list/: CMakeLists.txt  list.cpp  list.h  list.json  list.pro  list.vcproj  list.vcxproj  list.vcxproj.filters  plugin.rc
plugins/myplugin/: lc_myplugin.cpp  lc_myplugin.h
plugins/offset/: lc_offset.cpp
plugins/picfile/: CMakeLists.txt  README  picfile.cpp  picfile.h  picfile.json  picfile.pro  picfile.vcxproj  picfile.vcxproj.filters  plugin.rc
plugins/plotequation/: CMakeLists.txt  plot.cpp  plot.h  plotdialog.cpp  plotdialog.h  plotequation.json  plotequation.pro  plotequation.vcxproj  plotequation.vcxproj.filters  plugin.rc
plugins/pointstocsv/: CMakeLists.txt  plugin.rc  pointstocsv.cpp  pointstocsv.h  pointstocsv.json  pointstocsv.pro
plugins/sameprop/: CMakeLists.txt  plugin.rc  sameprop.cpp  sameprop.h  sameprop.json  sameprop.pro  sameprop.vcproj  sameprop.vcxproj  sameprop.vcxproj.filters
plugins/sample/: CMakeLists.txt  plugin.rc  sample.cpp  sample.h  sample.json  sample.pro  sample.vcproj  sample.vcxproj  sample.vcxproj.filters
plugins/ts/: README.md  generate-xlf.bat  plugins_ar.ts  plugins_ar.xlf  plugins_ca.ts  plugins_ca.xlf  plugins_cs.ts  plugins_cs.xlf  plugins_da.ts  plugins_da.xlf  plugins_da_DK.ts  plugins_de.ts  plugins_de.xlf  plugins_de_DE.ts  plugins_el.ts  plugins_el.xlf  plugins_el_GR.ts  plugins_en.ts  plugins_en.xlf  plugins_en_AU.ts  plugins_en_au.ts  plugins_en_au.xlf  plugins_eo.ts  plugins_es.ts  plugins_es_AR.ts  plugins_es_BO.ts  plugins_es_CL.ts  plugins_es_CO.ts  plugins_es_CR.ts  plugins_es_DO.ts  plugins_es_EC.ts  plugins_es_ES.ts  plugins_es_GT.ts  plugins_es_HN.ts  plugins_es_MX.ts  plugins_es_NI.ts  plugins_es_PA.ts  plugins_es_PE.ts  plugins_es_PR.ts  plugins_es_PY.ts  (+120 more)
(+7053 files in other folders)
